[gd_scene load_steps=6 format=3 uid="uid://bxmf3vwxkwqvh"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_hud"]
[ext_resource type="Texture2D" path="res://sprites/Tachimetrofull6.png" id="2_gauge"]
[ext_resource type="Texture2D" path="res://sprites/Tachimetrofull6.png" id="3_gaugefill"]
[ext_resource type="Texture2D" path="res://sprites/lancetta.png" id="4_needle"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="FuelGauge" type="Control" parent="."]
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 220.0

[node name="GaugeBackground" type="Sprite2D" parent="FuelGauge"]
position = Vector2(100, 100)
texture = ExtResource("2_gauge")

[node name="GaugeFill" type="Sprite2D" parent="FuelGauge"]
position = Vector2(100, 100)
texture = ExtResource("3_gaugefill")

[node name="Needle" type="Sprite2D" parent="FuelGauge"]
position = Vector2(100, 100)
texture = ExtResource("4_needle")

[node name="FuelLabel" type="Label" parent="FuelGauge"]
layout_mode = 0
offset_left = 40.0
offset_top = 160.0
offset_right = 160.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 20
text = "FUEL: 100%"
horizontal_alignment = 1

[node name="DistanceCounter" type="VBoxContainer" parent="."]
anchors_preset = 0
offset_left = 20.0
offset_top = 230.0
offset_right = 200.0
offset_bottom = 310.0

[node name="DistanceLabel" type="Label" parent="DistanceCounter"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Distance"
horizontal_alignment = 0

[node name="DistanceValue" type="Label" parent="DistanceCounter"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0 m"
horizontal_alignment = 0

[node name="NotificationLabel" type="Label" parent="."]
anchors_preset = 0
offset_left = 50.0
offset_top = 300.0
offset_right = 350.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "NOTIFICATION"
horizontal_alignment = 1
vertical_alignment = 1
visible = false
